@@ -4,8 +4,10 @@ Change Log
 
 Version 3.0.6 -
 ---------------
-- Refactored warning suppression code to preserve internal results names,
-  which, while undocumented, had been adopted by some projects.
+- Added `suppress_warning()` method to individually suppress a warning on a
+  specific ParserElement. Used to refactor `original_text_for` to preserve
+  internal results names, which, while undocumented, had been adopted by
+  some projects.
 
 - Fix bug when `delimited_list` was called with a str literal instead of a
   parse expression.
